--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <a href="#facilities">Facilities</a>
       <a href="#labs">Labs</a>
       
-      <a href="userlogin.php" class="btn" style="background-color: #ffffff; color: #000000;" onmouseover="this.style.backgroundColor='#'; this.style.borderColor='#0056b3';"  this.style.borderColor='#007bff';>Login</a>
+      <a href="login.html" class="btn" style="background-color: #ffffff; color: #000000;" onmouseover="this.style.backgroundColor='#'; this.style.borderColor='#0056b3';"  this.style.borderColor='#007bff';>Login</a>
 
     </nav>
     <div id="menu-btn" class="fas fa-bars"></div>
