--- a/login.html
+++ b/login.html
@@ -51,7 +51,8 @@
     <h1>Login</h1>
     
     <button class="button" onclick="location.href='userlogin.php'">User</button>
-    <button class="button" onclick="location.href='admin_dashboard.php'">Technician</button>
+    <button class="button" onclick="location.href='admin_dashboard.php'">admin</button>
+    <button class="button" onclick="location.href='tech_dashboard.php'">Technician</button>
   </div>
 </body>
 </html>
